k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmos-goz-api
  labels:
    app: cosmos-goz-api
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: cosmos-goz-api
  template:
    metadata:
      labels:
        app: cosmos-goz-api
    spec:
      containers:
      - name: api-external
        image: ${CONTAINER_IMAGE}:${CONTAINER_VERSION}
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      - name: nginx
        image: nginx:1.15
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: nginx-config
      volumes:
      - name: nginx-config
        configMap:
          name: cosmos-goz-api-nginx
      imagePullSecrets:
      - name: registry-gitlab-fish-md

---

kind: Service
apiVersion: v1
metadata:
  name: cosmos-goz-api
spec:
  type: ClusterIP
  selector:
    app: cosmos-goz-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: cosmos-goz-api
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "600"
spec:
  tls:
  - hosts:
    - ${HOST_NAME}
    secretName: cosmos-goz-api-tls
  rules:
  - host: ${HOST_NAME}
    http:
      paths:
      - backend:
          serviceName: cosmos-goz-api
          servicePort: 80
